--- a/src/styles/graphs.scss
+++ b/src/styles/graphs.scss
@@ -17,6 +17,13 @@
 
 #graph-costs {
     .column-legends {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        
         .legend {
             .square {
                 width: 25px;
