Weather icons left aligned

--- a/src/app/components/Weather/vWeather.scss
+++ b/src/app/components/Weather/vWeather.scss
@@ -12,26 +12,26 @@
             width: 8rem !important;
         }
         .ic-01n {
-            transform: translate(15px, -28px) !important;
+            transform: translate(0, -28px) !important;
         }
         .ic-02d, .ic-02n, .ic-03d,
         .ic-03n, .ic-04d, .ic-04n {
-            transform: translate(15px, -20px) !important;
+            transform: translate(0, -20px) !important;
         }
         .ic-10d,
         .ic-13d {
             width: 6rem !important;
-            transform: translate(20px, -17px) !important;
+            transform: translate(0, -17px) !important;
         }
         .ic-11d,
         .ic-11n {
             width: 6.5rem !important;
-            transform: translate(15px, -27px) !important;
+            transform: translate(0, -27px) !important;
         }
 
         .weather-icon {
             width: 7rem;
-            transform: translate(15px, -30px);
+            transform: translate(0, -30px);
         }
     }
 
