--- a/src/styles/graphs.scss
+++ b/src/styles/graphs.scss
@@ -10,8 +10,14 @@
     .chart-container {
         position: relative;
         margin: auto;
-        height: 70vh;
         width: 75vw;
+    }
+    .interval-buttons {
+        margin-top: 2rem;
+
+        .btn {
+            margin-right: 5px;
+        }
     }
 }
 
