--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -58,11 +58,13 @@ $white: #ffffff;
             font-size: 24px;
         }
 
-        .data-container {
+        .data-container,
+        .cost-container {
             width: 50%;
 
             h5 {
                 margin-bottom: 2px;
+                display: inline-block;
             }
 
             p,
