Format daily prices

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -166,6 +166,8 @@ $white: #ffffff;
                 margin-top: 0.5rem;
                 font-size: 1.2rem;
                 letter-spacing: 1px;
+                display: inline-block;
+                width: 47%;
             }
 
             p {
