--- a/src/index.scss
+++ b/src/index.scss
@@ -274,3 +274,51 @@ html, body {
 .margin-top-1 {
   margin-top: 1rem;
 }
+
+.dashboard-image {
+  height: 32px;
+  width: 32px;
+  top: 50%;
+  position: relative;
+  margin-top: -24px;
+}
+
+.analysis-item--cat {
+  border-bottom: 1px solid $lightgray;
+  padding-top: 1rem;
+
+  span {
+      font-size: 1.1rem;
+      letter-spacing: 1px;
+  }
+
+  >div {
+      display: inline-block;
+  }
+
+  &:last-child {
+      border: none;
+  }
+
+  .icon-container {
+      width: 30%;
+      text-align: center;
+      font-size: 24px;
+  }
+
+  .data-container,
+  .cost-container {
+      width: 50%;
+
+      h5 {
+          margin-bottom: 2px;
+          display: inline-block;
+      }
+
+      p,
+      h5 {
+          font-size: 1.1rem;
+          letter-spacing: 1px;
+      }
+  }
+}
