--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -36,7 +36,8 @@ $egray: #485658;
 
 }
 
-#login {
+#login,
+#register {
     background-image: url("/assets/login_background.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
