Changed font size of cards variables

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -124,7 +124,7 @@ $white: #ffffff;
 
             h5 {
                 margin-top: 0.5rem;
-                font-size: 1.2rem;
+                font-size: 1.1rem;
                 letter-spacing: 1px;
                 display: inline-block;
                 width: 47%;
@@ -133,6 +133,7 @@ $white: #ffffff;
             p {
                 margin-bottom: 0;
                 font-size: 1.2rem;
+                font-weight: 600;
                 letter-spacing: 1px;
             }
         }
