--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -159,7 +159,7 @@ $white: #ffffff;
             .analysis-card-header {
                 border-top-left-radius: 0.4rem;
                 border-top-right-radius: 0.4rem;
-                padding: 1.5rem 2rem 1rem;
+                padding: 1.5rem 2rem .5rem;
                 background-color: $white;
                 border-bottom: 1px solid $gray;
                 margin: 0;
