Made some adjustments to the responsiveness of the page

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -141,6 +141,7 @@ $white: #ffffff;
         .dashboard-general,
         .dashboard-history,
         .daily-reading-card {
+            margin-bottom: 1rem;
             .analysis-card-header {
                 h5 {
                     font-size: 1.1rem;
