--- a/src/styles/graphs.scss
+++ b/src/styles/graphs.scss
@@ -1,4 +1,4 @@
-.graphs, #graphs, #graph-costs, #graph-carbon {
+.graphs, #graphs, #graph-costs, #graph-carbon, #graph-generation {
     .date-buttons--container {
         margin: 2rem 0;
         text-align: right;
