--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -1,95 +1,97 @@
 $darkgray: #485658;
-$egreen: #AFFC0F;
-$blue: #29ACD1;
+$egreen: #affc0f;
+$blue: #29acd1;
 
 #profile {
+  margin-top: 0px !important;
 
-    margin-top: 0px !important;
+  .tab-pane {
+    padding: 1rem;
+  }
 
-    .tab-pane {
-        padding: 1rem;
+  .profile-map-container {
+    padding: 0;
+
+    .vue-map-container {
+      width: 100%;
+      height: 300px;
+    }
+  }
+
+  .profile-header {
+    margin-bottom: 1rem;
+
+    .row {
+      margin: 0;
     }
 
-    .profile-map-container{
-        padding: 0;
-
-        .vue-map-container {
-            width: 100%;
-            height: 300px;
-        }
+    .card-body,
+    .map-container {
+      padding: 0;
     }
 
-    .profile-header {
+    .header-bottom {
+      padding: 1.25rem;
 
-        margin-bottom: 1rem;
-
-        .row {
-            margin: 0;
-        }
-
-        .card-body, .map-container{
-            padding: 0;
-        }
-
-        .header-bottom {
-            padding: 1.25rem;
-
-            .col {
-                text-align: center;
-            }
-        }
-    
-        .user-info{
-            padding: 5rem 1.25rem;
-            background-color: $darkgray;
-            color: #FFFF;
-            text-align: center;
-
-            img {
-                width: 100px;
-            }
-
-            h5 {
-                font-weight: 600;
-                margin-top: 1rem;
-            }
-
-            p {
-                text-transform: uppercase;
-            }
-        }
+      .col {
+        text-align: center;
+      }
     }
 
-    .side-card-container {
-        padding-left: 0;
-    }
+    .user-info {
+      padding: 5rem 1.25rem;
+      background-size: 100% 100%;
+      background-image: url("/assets/images/Background.jpg");
+      color: #ffff;
+      text-align: center;
 
-    .side-card {
-        box-shadow: none;
-        border-radius: 5px;
-        background-color: $blue;
-        color: #FFFF;
-    }
+      img {
+        width: 100px;
+      }
 
-    .profile-main .card-body {
-        padding: 2rem;
-    }
+      h5 {
+        font-weight: 600;
+        margin-top: 1rem;
+      }
 
-    .profile-main .card-body > div.row {
-        margin-left: 0;
-        margin-right: 0;
+      p {
+        text-transform: uppercase;
+      }
     }
+  }
 
-    .profile-main .action .btn:first-child, .btn:nth-child(2) {
-        margin-left: 1rem;
-    }
+  .side-card-container {
+    padding-left: 0;
+  }
 
-    .edit-buttons, .profile-company {
-        margin-top: 2rem;
-    }
+  .side-card {
+    box-shadow: none;
+    border-radius: 5px;
+    background-color: $blue;
+    color: #ffff;
+  }
 
-    .profile-company h5 {
-        padding-left: 15px;
-        width: 100%;
-    }
+  .profile-main .card-body {
+    padding: 2rem;
+  }
+
+  .profile-main .card-body > div.row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .profile-main .action .btn:first-child,
+  .btn:nth-child(2) {
+    margin-left: 1rem;
+  }
+
+  .edit-buttons,
+  .profile-company {
+    margin-top: 2rem;
+  }
+
+  .profile-company h5 {
+    padding-left: 15px;
+    width: 100%;
+  }
 }
